# bene-gesserit

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  clippy.toml  deny.toml  docs.rs  rustfmt.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  security.yml
benches/: membrane_performance.rs
docs/: Gemfile  _config.yml  index.md  orchestrator-integration.md  plasma-membrane.md
docs/_examples/: index.md
docs/_fundamentals/: index.md
docs/_language/: index.md
docs/_membrane_dynamics/: index.md
docs/_site/: README.md  biological-maxwell-demons.html  circuit-interface-layer.html  feed.xml  index.html  molecular-layer.html  molecular-layer.md  orchestrator-integration.html  plasma-membrane.html  quickstart-example.html  quickstart-example.md  robots.txt  sitemap.xml  turbulance-masterclass.html
docs/_site/examples/: index.html
docs/_site/fundamentals/: advanced-mathematical-extensions.html  code.html  extended-quantum-biology.html  extended-quantum-biology.md  index.html  membranes.html  oscillations.html  quantum-extensions.html  quantum-extensions.md
docs/_site/language/: goal.html  index.html  special_features.html  turbulance-language.html
docs/_site/membrane-dynamics/: index.html
docs/fundamentals/: advanced-mathematical-extensions.md  code.md
docs/membrane-dynamics/: biological-maxwell-demons.md  circuit-interface-layer.md  index.md  quickstart-example.md
examples/: basic_membrane_patch.rs  bmd_biological_quantum_computation.rs  complete_integration.rs  extended_quantum_biology.rs  glycolysis_quantum_computer.rs  hardware_integration.rs  quantum_consciousness.rs  systems_integration.rs  turbulance_scientific_method.rs
jacquard/: package.json  website.md
jacquard/public/data/: categorical_speedup_validation.json  pharma_kuramoto_validation.json  temperature_velocity_independence.json  triple_equivalence_empirical.json
jacquard/public/models/: crucial_ballistix_8gb_ddr4_3600_ram__black.glb
jacquard/src/components/: Footer.js  Logo.js  Navbar.js  PaperPage.js
jacquard/src/components/charts/: CapacityChart.js  ComputingStackChart.js  PharmaKuramotoChart.js  SelfConsistencyChart.js  SpectralLinesChart.js  SpeedupChart.js  TemperatureIndependenceChart.js  TripleEquivalenceChart.js
jacquard/src/pages/: _app.js  framework.js  index.js  invest.js  papers.js
jacquard/src/pages/papers/: categorical-converter.js  lipid-derivation.js  membrane-architecture.js  triple-isomorphism.js
phosphate/docs/aperture-array/: aperture-array.tex  references.bib
phosphate/docs/aperture-array/figures/: aperture-captions.tex
phosphate/docs/bilayer-substrate/: lipid-composition.tex  references.bib
phosphate/docs/bilayer-substrate/figures/: bilayer-captions.tex
phosphate/docs/cascade-fabric/: cascade-fabric.tex  references.bib
phosphate/docs/cascade-fabric/figures/: cascade-captions.tex
phosphate/docs/energy-transducer/: energy-transducer.tex  references.bib
phosphate/docs/energy-transducer/figures/: energy-captions.tex
phosphate/docs/readout-interface/: measurement-system.tex  references.bib
phosphate/docs/readout-interface/figures/: readout-captions.tex
phosphate/docs/state-encoder/: embedding-uniqueness-state-encoder.tex  references.bib
phosphate/docs/state-encoder/figures/: state-captions.tex
phosphate/results/: validation_results.json
phosphate/src/figures/: generate_all.py  generate_panels.py
phosphate/src/validation/: __init__.py  aperture_array.py  bilayer_substrate.py  cascade_fabric.py  constants.py  energy_transducer.py  readout_interface.py  run_all.py  state_encoder.py
reverend/: architecture.md
reverend/combined-validation/: cross_domain_validation_1.py  cross_domain_validation_2.py
reverend/combined-validation/results/: cross_domain_capacity_validation.json  full_computing_stack_validation.json
reverend/publications/isomorphism-atlas/: generate_panels.py  references.bib  tripple-isomorphism-architecture.tex
reverend/publications/isomorphism-atlas/figures/: atlas-captions.tex
reverend/publications/membrane-cognitive-architecture/: generate_panels.py  membrane-cognitive-architecture.tex  references.bib
src/: advanced_quantum_biology.rs  biological_maxwell_demons.rs  biological_quantum_computer.rs  biological_quantum_implementations.rs  bmd_enhanced_solver.rs  circuit_interface.rs  constants.rs  error.rs  extended_solver.rs  glycolysis_quantum_computer.rs  hardware_demo.rs  hardware_oscillation_harvester.rs  lib.rs  main.rs  molecular.rs  pixel_noise_harvester.rs  quantum_biology.rs  quantum_extensions.rs  quantum_hamiltonian.rs  quantum_solver.rs  systems.rs  tests.rs  turbulance_parser.rs  turbulance_tokenizer.rs  types.rs
src/circuits/: mod.rs
src/coupling/: circuit_interface.rs  feedback_loops.rs  mod.rs  parameter_mapping.rs
src/domains/: lipid_rafts.rs  mod.rs  nanodomains.rs  phase_separation.rs
src/dynamics/: diffusion.rs  fission.rs  flip_flop.rs  fusion.rs  mod.rs
src/endocytosis/: mod.rs
src/lipids/: mod.rs
src/proteins/: clustering.rs  insertion.rs  interactions.rs  mod.rs  trafficking.rs
src/signaling/: mod.rs
(+1 files in other folders)
